fea: remove vmoptions